--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -92,7 +92,7 @@
 
     <!-- /******************************************* cont1 *******************************************/ -->
     <div id="cont">
-        <main class="cont ibx">
+        
             <section class="cont1">
                 <video class="Mvideo" src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
                 <h1 id="gosub">
@@ -106,6 +106,7 @@
                 </h1>
             </section>
             <!-- /******************************************* cont2 *******************************************/ -->
+            <main class="cont ibx">
             <section class="cont2">
                 <h2 class="ad">BIFF 2021 수상작</h2>
 
@@ -171,13 +172,13 @@
             </section>
             <!-- /******************************************* cont3 *******************************************/ -->
             <section class="cont3">
-                <h3 class="ad">아시아영화의 창</h3>
-                <nav class="mlist">
+                <h3 class="ad3">아시아영화의 창</h3>
+                <nav class="mlist3">
                     <ul>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
                                 <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
-                                <ol class="movtxt">
+                                <ol class="movtxt3">
                                     <li>엔칸토: 마법의 세계</li>
                                     <li>스테파니 비트리즈</li>
                                     <li>애니메이션</li>
@@ -186,7 +187,7 @@
                             <li>
                                 <a href="#" onclick="goMv('yFZh-Wqi7RI')">
                                     <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
-                                    <ol class="movtxt">
+                                    <ol class="movtxt3">
                                         <li>스파이더맨: 노 웨이 홈</li>
                                         <li>톰 홀랜드, 젠데이아 콜먼</li>
                                         <li>액션,판타지</li>
@@ -196,7 +197,7 @@
                             <li>
                                 <a href="#" onclick="goMv('KBT_YZdoF6g')">
                                     <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
-                                    <ol class="movtxt">
+                                    <ol class="movtxt3">
                                         <li>엔칸토: 마법의 세계</li>
                                         <li>스테파니 비트리즈</li>
                                         <li>애니메이션</li>
@@ -205,7 +206,7 @@
                                 <li>
                                     <a href="#" onclick="goMv('yFZh-Wqi7RI')">
                                         <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
-                                <ol class="movtxt">
+                                <ol class="movtxt3">
                                     <li>스파이더맨: 노 웨이 홈</li>
                                     <li>톰 홀랜드, 젠데이아 콜먼</li>
                                     <li>액션,판타지</li>
@@ -218,7 +219,7 @@
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
                                 <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
-                                <ol class="movtxt">
+                                <ol class="movtxt3">
                                     <li>엔칸토: 마법의 세계</li>
                                     <li>스테파니 비트리즈</li>
                                     <li>애니메이션</li>
@@ -227,7 +228,7 @@
                             <li>
                                 <a href="#" onclick="goMv('yFZh-Wqi7RI')">
                                     <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
-                                    <ol class="movtxt">
+                                    <ol class="movtxt3">
                                         <li>스파이더맨: 노 웨이 홈</li>
                                         <li>톰 홀랜드, 젠데이아 콜먼</li>
                                         <li>액션,판타지</li>
@@ -237,7 +238,7 @@
                             <li>
                                 <a href="#" onclick="goMv('KBT_YZdoF6g')">
                                     <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
-                                    <ol class="movtxt">
+                                    <ol class="movtxt3">
                                         <li>엔칸토: 마법의 세계</li>
                                         <li>스테파니 비트리즈</li>
                                         <li>애니메이션</li>
@@ -246,7 +247,7 @@
                                 <li>
                                     <a href="#" onclick="goMv('yFZh-Wqi7RI')">
                                         <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
-                                        <ol class="movtxt">
+                                        <ol class="movtxt3">
                                             <li>스파이더맨: 노 웨이 홈</li>
                                             <li>톰 홀랜드, 젠데이아 콜먼</li>
                                             <li>액션,판타지</li>
