--- a/001.HTML/008.VOGUE_PJ/002.site/sub.html
+++ b/001.HTML/008.VOGUE_PJ/002.site/sub.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fashion | 보그 코리아 (Vogue Korea)</title>
+    <title>서브아이템 | 보그 코리아 (Vogue Korea)</title>
     <link rel="shortcut icon" href="./images/icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css">
     <link rel="stylesheet" href="./css/sub.css">
     <link rel="stylesheet" href="./css/media.css">
     <!-- 미디어쿼리를 본css하단에 link방식으로 넣어준다 -->
-<script src="js/common.js"></script>
+    <script src="js/linksys.js"></script>
+    <script src="js/common.js"></script>
 </head>
 
 <body>
@@ -159,69 +160,69 @@
                                 <a href="#">SHOPPING</a>
                             </li>
                         </ul>
-                </nav>
-                <!-- 1-5-2.모바일 sns메뉴 -->
-                <div class="mosns">
-                    <a href="#" class="fi fi-instagram">
-                        <span class="ir">
-                            인스타그램
-                        </span>
-                    </a>
-                    <a href="#" class="fi fi-facebook">
-                        <span class="ir">
-                            페이스북
-                        </span>
-                    </a>
-                    <a href="#" class="fi fi-twitter">
-                        <span class="ir">
-                            트위터
-                        </span>
-                    </a>
-                    <a href="#" class="fi fi-youtube-play">
-                        <span class="ir">
-                            유튜브
-                        </span>
-                    </a>
-                    <a href="#">
-                        <span class="ir">
-                            카카오스토리
-                        </span>
-                    </a>
+                    </nav>
+                    <!-- 1-5-2.모바일 sns메뉴 -->
+                    <div class="mosns">
+                        <a href="#" class="fi fi-instagram">
+                            <span class="ir">
+                                인스타그램
+                            </span>
+                        </a>
+                        <a href="#" class="fi fi-facebook">
+                            <span class="ir">
+                                페이스북
+                            </span>
+                        </a>
+                        <a href="#" class="fi fi-twitter">
+                            <span class="ir">
+                                트위터
+                            </span>
+                        </a>
+                        <a href="#" class="fi fi-youtube-play">
+                            <span class="ir">
+                                유튜브
+                            </span>
+                        </a>
+                        <a href="#">
+                            <span class="ir">
+                                카카오스토리
+                            </span>
+                        </a>
+                    </div>
+                    <!-- 1-5-3.매거진 박스 -->
+                    <figure class="magbox">
+                        <!-- 잡지커버 이미지 -->
+                        <a href="#" class="mcover">
+                            <img src="./images/cover.jpg" alt="보그표지">
+                        </a>
+                        <!-- 잡지설명 -->
+                        <figcaption>
+                            정기구독을 신청하면 최대 30% 할인혜택을 드립니다!
+                        </figcaption>
+                        <!-- 정기구독버튼 -->
+                        <button class="magbtn">
+                            정기구독신청
+                        </button>
+                    </figure>
+                    <!-- 1-5-4. 하단링크박스 -->
+                    <ul class="moblink">
+                        <li>
+                            <a href="#">
+                                회사소개 /
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                광고 및 제휴 /
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                개인정보 처리방침
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-                <!-- 1-5-3.매거진 박스 -->
-                <figure class="magbox">
-                    <!-- 잡지커버 이미지 -->
-                    <a href="#" class="mcover">
-                        <img src="./images/cover.jpg" alt="보그표지">
-                    </a>
-                    <!-- 잡지설명 -->
-                    <figcaption>
-                        정기구독을 신청하면 최대 30% 할인혜택을 드립니다!
-                    </figcaption>
-                    <!-- 정기구독버튼 -->
-                    <button class="magbtn">
-                        정기구독신청
-                    </button>
-                </figure>
-                <!-- 1-5-4. 하단링크박스 -->
-                <ul class="moblink">
-                    <li>
-                        <a href="#">
-                            회사소개 /
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            광고 및 제휴 /
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            개인정보 처리방침
-                        </a>
-                    </li>
-                </ul>
-            </div>
             </div><!-- 모바일용 링크 끝 -->
         </header>
     </div>
@@ -231,24 +232,24 @@
             <!-- 1. 서브페이지 탑영역 -->
             <header class="subtop">
                 <!-- 1-1. 서브타이틀 -->
-                <h2 class="stit">Fashion</h2>
+                <h2 class="stit"></h2>
                 <!-- 1-2. 서브메뉴(LNB-Local Navigation Bar) -->
                 <nav class="lnb">
                     <ul>
                         <li>
-                            <a href="#">전체</a>
+                            <a href="#"></a>
                         </li>
                         <li>
-                            <a href="#">트렌드</a>
+                            <a href="#"></a>
                         </li>
                         <li>
-                            <a href="#">아이템</a>
+                            <a href="#"></a>
                         </li>
                         <li>
-                            <a href="#">피플</a>
+                            <a href="#"></a>
                         </li>
                         <li>
-                            <a href="#">화보</a>
+                            <a href="#"></a>
                         </li>
                     </ul>
                 </nav>
@@ -260,13 +261,13 @@
             <section class="pt2 rbx">
                 <div class="rbxIn fbx">
                     <div class="cbx bgi bg1-1">
-                        <h2>&lt;고양이를 부탁해&gt;의 20주년 기획전</h2>
+                        
                     </div>
                     <div class="cbx bgi bg1-2">
-                        <h2>패션계에서 가장 주목받는 신인 디자이너, 자크무스</h2>
+                        <h2></h2>
                     </div>
                     <div class="cbx bgi bg1-3">
-                        <h2>서울국제여성영화제 장편 경쟁 한국 영화 4편</h2>
+                        <h2></h2>
                     </div>
                 </div>
             </section>
@@ -274,13 +275,13 @@
             <section class="pt2 rbx">
                 <div class="rbxIn fbx">
                     <div class="cbx bgi bg2-1">
-                        <h2>드라마 &lt;알고 있지만&gt;의 나비가 유행이라고?</h2>
+                        <h2></h2>
                     </div>
                     <div class="cbx bgi bg2-2">
-                        <h2>홍콩 누아르 영화 주인공으로 변신한 민주</h2>
+                        <h2></h2>
                     </div>
                     <div class="cbx bgi bg2-3">
-                        <h2>MSG워너비여, 영원하라!</h2>
+                        <h2></h2>
                     </div>
                 </div>
             </section>
@@ -315,6 +316,10 @@
             </ul>
         </footer>
     </div>
+    <!-- 위로가기 버튼 -->
+    <a href="#" class="tbtn fi fi-angle-up">
+        <span class="ir">위로가기버튼</span>
+    </a>
 </body>
 
 </html>
