--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -256,11 +256,14 @@
                                 </li>
                             </ul>
                             </section>
+                            <!-- /******************************************* cont3 *******************************************/ -->
                             <section class="cont4">
+                                
                 <h2>컨텐츠4</h2>
             </section>
         </main>
     </div>
+    
 
     <!-- /******************************************* 하단 *******************************************/ -->
     <!-- <div id="info">
