--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -93,8 +93,8 @@
     <!-- /******************************************* cont1 *******************************************/ -->
     <div id="cont">
         
-            <section class="cont1">
-                <video class="Mvideo" src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
+        <section class="cont1">
+            <video class="Mvideo" src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
                 <h1 id="gosub">
                     <a href="sub1.html">
                         <img src="./img/logo.gif" alt="BIFF로고">
@@ -102,11 +102,11 @@
                             BUSAN <br>
                             International Film Festival <br>
                             6 - 15 October 2021</span>
-                    </a>
-                </h1>
-            </section>
-            <!-- /******************************************* cont2 *******************************************/ -->
-            <main class="cont ibx">
+                        </a>
+                    </h1>
+                </section>
+                <!-- /******************************************* cont2 *******************************************/ -->
+                <main class="cont ibx">
             <section class="cont2">
                 <h2 class="ad">BIFF 2021 수상작</h2>
 
@@ -115,6 +115,7 @@
                         <li>
                             <a href="#" onclick="goMv('dWEQjU3GCE0')">
                                 <img src="./img/mi1.jpeg" alt="뉴 커런츠상">
+                                <span>안녕, 내 고향</span>
                                 <ol class="movtxt">
                                     <li>뉴 커런츠상</li> <br>
                                     <li>&lt; 안녕, 내 고향&gt; </li> <br>
@@ -258,7 +259,9 @@
                             </section>
                             <!-- /******************************************* cont3 *******************************************/ -->
                             <section class="cont4">
-                                
+                                <div class="tbl_schedule_wwrap">
+
+                                </div>
                 <h2>컨텐츠4</h2>
             </section>
         </main>
