--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -108,7 +108,7 @@
                 <!-- /******************************************* cont2 *******************************************/ -->
                 <main class="cont ibx">
             <section class="cont2">
-                <h2 class="ad">BIFF 2021 수상작</h2>
+                <h2 class="ad1">BIFF 2021 수상작</h2>
 
                 <nav class="mlist">
                     <ul>
@@ -173,8 +173,8 @@
             </section>
             <!-- /******************************************* cont3 *******************************************/ -->
             <section class="cont3">
-                <h3 class="ad3">아시아영화의 창</h3>
-                <nav class="mlist3">
+                <h3 class="ad2">아시아영화의 창</h3>
+                <nav class="mlist3-1">
                     <ul>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
@@ -215,7 +215,11 @@
                             </a>
                         </li>
                     </ul>
-                    <h3 class="ad">와이드 앵글</h3>
+                </nav>
+
+                    <h3 class="ad3">와이드 앵글</h3>
+                    <nav class="mlist3-2">
+
                     <ul>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
@@ -256,6 +260,8 @@
                                     </a>
                                 </li>
                             </ul>
+                        </nav>
+
                             </section>
                             <!-- /******************************************* cont3 *******************************************/ -->
                             <section class="cont4">
