--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>부산국제영화제</title>
+    <link rel="shortcut icon" href="./img/Biff_logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./main.css">
     <script>
         function sMenu() {
