--- a/004.jQuery학습/001.기본사용법/001.제이쿼리종합/index.html
+++ b/004.jQuery학습/001.기본사용법/001.제이쿼리종합/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제이쿼리 기본 사용법</title>
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/main.js"></script>
+    <!-- 제이쿼리는 순서가 매우중요함
+    1.jQuery라이브러리/2.jQuery UI/3.구현JS -->
 </head>
 <body>
     <!-- 1. 전체타이틀 -->
