--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -292,7 +292,7 @@
                                 <p class="time en">18:00</p>
                                 <div class="film_tit">
                                     <a
-                                        href="/kor/html/program/prog_view.asp?idx=55909&c_idx=353&sp_idx=509&QueryStep=2">
+                                        href="#">
                                         <span class="film_tit_kor">행복의 나라로</span>
                                         <span class="film_tit_eng en">Heaven: To the Land of Happiness</span>
                                     </a>
@@ -327,7 +327,7 @@
                                 <p class="time en">18:00</p>
                                 <div class="film_tit">
                                     <a
-                                        href="/kor/html/program/prog_view.asp?idx=55909&c_idx=353&sp_idx=509&QueryStep=2">
+                                        href="#">
                                         <span class="film_tit_kor">행복의 나라로</span>
                                         <span class="film_tit_eng en">Heaven: To the Land of Happiness</span>
                                     </a>
@@ -335,14 +335,13 @@
                                 </div>
                                 <div class="grade">
                                     <span class="ico_grade ico_15" title="15세 이상 관람가"></span>
-                                    <div class="sch_it sch_it5 blank_wrap">
-                                        <span class="sch_it_blank"></span>
-                                    </div>
-                                    <div class="sch_it sch_it6 blank_wrap">
-                                        <span class="sch_it_blank"></span>
-                                    </div>
                                 </div>
-
+                            </div>
+                            <div class="sch_it sch_it5 blank_wrap">
+                                <span class="sch_it_blank"></span>
+                            </div>
+                            <div class="sch_it sch_it6 blank_wrap">
+                                <span class="sch_it_blank"></span>
                             </div>
                         </div>
                     </div>
