--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -347,8 +347,8 @@
                     </div>
                     </div>
             </section>
-        </main>
-    </div>
+        <!-- </main>
+    </div> -->
 
 
     <!-- /******************************************* 하단 *******************************************/ -->
