--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -109,7 +109,7 @@
         <!-- /******************************************* cont2 *******************************************/ -->
         <main class="cont ibx">
             <section class="cont2">
-                <h2 class="ad1">BIFF 2021 수상작</h2>
+                <h2 class="ad1">BIFF 2022 수상후보작품</h2>
 
                 <nav class="mlist">
                     <ul>
@@ -347,8 +347,6 @@
                     </div>
                     </div>
             </section>
-        <!-- </main>
-    </div> -->
 
 
     <!-- /******************************************* 하단 *******************************************/ -->
