--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -346,6 +346,23 @@
                         </div>
                     </div>
                     </div>
+                    <!-- <br>
+                    <br> -->
+                    <div class="caution_box mt50">
+                        <div class="row">
+                            <div class="col-md-2 col-xs-12">
+                                <p class="tit tit-sec bold mt10">유의사항</p>
+                            </div>
+                            <div class="col-md-10 col-xs-12">
+                                <ul class="list_secondary mt10">
+                                    <li>GV(게스트와의 만남)는 사전 고지없이 변동될 수 있습니다.</li>
+                                    <li>5세 미만의 어린이는 입장하실 수 없습니다.</li>
+                                    <li>모든 촬영기기는 저작권 보호법에 의해 상영관 내 반입하실 수 없으며, 촬영을 금지합니다. </li>
+                                    <li>상영 시작 이후 15분까지는 입장을 허용합니다. </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
             </section>
 
 
