--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -179,7 +179,7 @@
                     <ul>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
-                                <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
+                                <img src="./img/c3ml1.jpeg" alt="엔칸토:마법의 세계">
                                 <ol class="movtxt3">
                                     <li>엔칸토: 마법의 세계</li>
                                     <li>스테파니 비트리즈</li>
