--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -100,9 +100,9 @@
                 <a href="sub1.html">
                     <img src="./img/logo.gif" alt="BIFF로고">
                     <span>
-                        BUSAN <br>
+                        <br>
                         International Film Festival <br>
-                        6 - 15 October 2022</span>
+                        </span>
                 </a>
             </h1>
         </section>
