--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -288,13 +288,13 @@
                                 <span class="sch_it_blank"></span>
                             </div>
                             <div class="sch_it sch_it4">
-                                <span class="code en">001</span>
+                                <span class="code en">001관</span>
                                 <p class="time en">18:00</p>
                                 <div class="film_tit">
                                     <a
                                         href="#">
                                         <span class="film_tit_kor">행복의 나라로</span>
-                                        <span class="film_tit_eng en">Heaven: To the Land of Happiness</span>
+                                        <span class="film_tit_eng en">To the Land of Happiness</span>
                                     </a>
                                     "(개막식+개막작)"
                                 </div>
@@ -323,13 +323,13 @@
                                 <span class="sch_it_blank"></span>
                             </div>
                             <div class="sch_it sch_it4">
-                                <span class="code en">605</span>
+                                <span class="code en">605관</span>
                                 <p class="time en">18:00</p>
                                 <div class="film_tit">
                                     <a
                                         href="#">
                                         <span class="film_tit_kor">행복의 나라로</span>
-                                        <span class="film_tit_eng en">Heaven: To the Land of Happiness</span>
+                                        <span class="film_tit_eng en">To the Land of Happiness</span>
                                     </a>
                                     "(개막식생중계+개막작)"
                                 </div>
