--- a/004.jQuery학습/002.실전연습/01_SlideChangeStage/onePage_autoScroll.html
+++ b/004.jQuery학습/002.실전연습/01_SlideChangeStage/onePage_autoScroll.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Page Scroll</title>
+    <title>One Page Auto Scroll</title>
     <style>
         html,
         body{
@@ -12,6 +12,8 @@
             width: 100%;
             height: 100%;/* 보이는 화면기준 채우기 */
             /* body하위 요소의 높이값 %의 기준이됨! */
+            overflow: hidden;
+            /* 스크롤 숨김 (스크롤안됨) */
         }
         /* 공통셋팅 */
         a{
@@ -151,6 +153,7 @@
     </style>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+    <script src="js/jquery-autoScroll-1.0.js"></script>
     <script>
         /////////////// 로딩구역 //////////////////////////
         $(function(){ ////// jQB //////////////////////////////////////////////////////////////////
