--- a/002.CSS/RollingCube.html
+++ b/002.CSS/RollingCube.html
@@ -53,39 +53,39 @@
 
         /* 1.앞면 */
         .cube>span:first-child {
-            background-color: gold;
-            transform: translateZ(150px);
+            background-color: rgb(255, 8, 0);
+            transform: translateZ(200px);
         }
 
         /* 2.오른쪽면 */
         .cube>span:nth-child(2) {
-            background-color: silver;
-            transform: rotateY(90deg) translateZ(150px);
+            background-color: rgb(145, 255, 0);
+            transform: rotateY(90deg) translateZ(200px);
             /* y축회전 먼저하고 z축 밀기를 해야함(순서중요) */
         }
 
         /* 3.뒷쪽면 */
         .cube>span:nth-child(3) {
-            background-color: rgb(85, 72, 15);
-            transform: rotateY(180deg) translateZ(150px);
+            background-color: rgb(15, 85, 85);
+            transform: rotateY(180deg) translateZ(200px);
         }
 
         /* 4.왼쪽면 */
         .cube>span:nth-child(4) {
-            background-color: snow;
-            transform: rotateY(-90deg) translateZ(150px);
+            background-color: rgb(0, 105, 241);
+            transform: rotateY(-90deg) translateZ(200px);
         }
 
         /* 5.윗면 */
         .cube>span:nth-child(5) {
-            background-color: black;
-            transform: rotateX(90deg) translateZ(150px);
+            background-color: rgb(226, 12, 208);
+            transform: rotateX(90deg) translateZ(200px);
         }
 
         /* 6.아랫면 */
         .cube>span:nth-child(6) {
-            background-color: #fafafa;
-            transform: rotateX(-90deg) translateZ(150px);
+            background-color: #ff00b3;
+            transform: rotateX(-90deg) translateZ(200px);
         }
 
         /* 애니호출 class */
