--- a/002.CSS/RollingPhone.html
+++ b/002.CSS/RollingPhone.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>롤링폰</title>
+
     <style>
-        html, body {
+        @import url('https://fonts.googleapis.com/css2?family=Faster+One&display=swap');
+        /* font-family: 'Faster One', cursive; */
+
+        html,
+        body {
             margin: 0;
             padding: 0;
             height: 100vh;
         }
+
         /* 폰박스 */
-        .phone{
+        .phone {
             position: absolute;
             top: calc(50% - 200px);
             left: calc(50% - 100px);
             /* 정중앙이동 */
             width: 200px;
             height: 400px;
-            transform: rotateX(350deg) rotateY(160deg);
+            transform: rotateX(10deg) rotateY(30deg);
             /* 트랜스폼 입체설정하기 */
             transform-style: preserve-3d;
 
@@ -26,7 +33,7 @@
         }
 
         /* 각면 공통 */
-        .phone span{
+        .phone span {
             position: absolute;
             width: 200px;
             height: 400px;
@@ -34,50 +41,175 @@
             background-repeat: no-repeat;
             background-size: 100% 100%;
         }
+
         /* 각면 만들기 */
         /* 1.윗면 */
-        .phone span:nth-child(1){
+        .phone span:nth-child(1) {
             height: 20px;
             background-image: url(./images/ip06.png);
             top: -10px;
             transform: rotateX(-90deg);
         }
+
         /* 2.아랫면 */
-        .phone span:nth-child(2){
+        .phone span:nth-child(2) {
             height: 20px;
             background-image: url(./images/ip05.png);
             bottom: -10px;
             transform: rotateX(90deg);
         }
+
         /* 3.우측면 */
-        .phone span:nth-child(3){
+        .phone span:nth-child(3) {
             width: 20px;
             background-image: url(./images/ip04.png);
             right: -10px;
             transform: rotateY(90deg);
         }
+
         /* 4.좌측면 */
-        .phone span:nth-child(4){
+        .phone span:nth-child(4) {
             width: 20px;
             background-image: url(./images/ip03.png);
             left: -10px;
             transform: rotateY(-90deg);
         }
-        /* 5.뒷면 */
-        .phone span:nth-child(5){
-            background-image: url(./images/ip02.png);
+
+        /* 5.앞면 */
+        .phone span:nth-child(5) {
+            background-image: url(./images/ip01.png);
             transform: rotateY(180deg) translateZ(-10px);
         }
-        /* 6.앞면 */
-        .phone span:nth-child(6){
-            background-image: url(./images/ip01.png);
+
+        /* 6.뒷면 */
+        .phone span:nth-child(6) {
+            background-image: url(./images/ip02.png);
             transform: rotateY(-180deg) translateZ(10px);
+        }
+
+        /* 애니호출 class */
+        .cube-ani {
+            animation: rolling 2s ease-in-out 1s 2 alternate;
+        }
+
+
+        /* 큐브회전 애니메이션 키프레임 */
+        @keyframes rolling {
+            to {
+                transform: rotateX(370deg) rotateY(-330deg);
+                /* 
+                    x축은 10도 나가있고 같은 방향(+)으로
+                    한바퀴 회전하려면 360도+10도=370도
+
+                    y축은 30도 나가있고 반대 방향(-)으로
+                    한바퀴 회전하려면 -360도 + 30도 = -330도
+                */
+            }
+        }
+
+        /* 글자액션박스 */
+        .fbx {
+            position: absolute;
+            top: 10%;
+            width: 100vw;
+            overflow: hidden;
+
+        }
+
+        /* 텍스트 박스 */
+        .tbx {
+            position: relative;
+            left: 0;
+            /* left값이 -100%까지 애니메이션됨 */
+            width: 200vw;
+            display: flex;
+
+            /* 애니메이션 */
+            animation: textFlow 5s linear infinite;
+        }
+
+        /* 텍스트 흐르기 키프레임 */
+        @keyframes textFlow {
+            to {
+                left: -100%;
+            }
+        }
+
+        /* 텍스트 흐르기 키프레임 */
+
+        .tbx ul {
+            display: flex;
+            /* 아래 li가 옆으로 흐름 */
+            flex: 1;
+            /* 등분할 */
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+        .tbx li {
+            flex: 1;
+            /* 등분할 */
+            text-align: center;
+            font-family: 'Faster One', cursive;
+            font-size: 3vw;
+            color: rgb(255, 185, 56);
+
+            /* outline: 2px dotted gray; */
+        }
+
+        /* 아래쪽 글자 흐름박스 */
+        .fb2{
+            top: auto;
+            bottom: 10%;
+            /* 아래쪽에서 10%로 변경 */
+        }
+
+        /* 그라데이션넣기 */
+        body{
+            background-image: linear-gradient(to bottom, #fff 15%, cyan 50%, #fff);
         }
     </style>
 </head>
+
 <body>
+
+    <div class="fbx">
+        <div class="tbx">
+            <ul>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+            </ul>
+            <ul>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="fbx fb2">
+        <div class="tbx">
+            <ul>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+            </ul>
+            <ul>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+                <li>iPhone 2022</li>
+            </ul>
+        </div>
+    </div>
+
     <!-- 폰박스 -->
-    <div class="phone">
+    <div class="phone cube-ani">
         <span></span>
         <span></span>
         <span></span>
@@ -85,6 +217,7 @@
         <span></span>
         <span></span>
     </div>
-    
+
 </body>
+
 </html>
