--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -8,20 +8,8 @@
     <title>부산국제영화제</title>
     <link rel="shortcut icon" href="./img/Biff_logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./main.css">
-    <script>
-        function sMenu() {
-
-            let gnb =
-                document.getElementsByClassName("gnb").item(0);
-            gnb.classList.toggle("on");
-
-        }
-
-
-    </script>
-
+    <script src="./main.js"></script>
 </head>
-
 <body>
     <!-- ******************************************* 상단 ******************************************* -->
     <div id="top">
