--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -16,7 +16,7 @@
         <div class="ham">
             <button class="menu" onclick="sMenu()">≡</button>
         </div>
-        <nav class="gnb">
+        <nav class="gnb1">
             <button class="cbtn" onclick="sMenu()">×</button>
             <ul>
                 <li><a href="#">BIFF</a></li>
@@ -60,7 +60,7 @@
                 </a>
             </div>
 
-            <div class="gnb">
+            <div class="gnb2">
                 <div>
                     <ul class="lb">
                         <li><a href="#">BIFF</a></li>
