--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -161,6 +161,13 @@
                                 </a></li> -->
                     </ul>
                 </nav>
+                <a href="#" class="abtn lb">
+                    <img src="./img/left.png" alt="왼쪽버튼">
+                </a>
+                <a href="#" class="abtn rb">
+                    <img src="./img/right.png" alt="오른쪽버튼">
+                </a>
+        
             </section>
             <!-- /******************************************* cont3 *******************************************/ -->
             <section class="cont3">
