--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -102,11 +102,10 @@
                 <h2 class="ad1">BIFF 2022 수상후보작품</h2>
 
                 <nav class="mlist">
-                    <ul>
+                    <ul class="block">
                         <li>
-                            <a href="#" onclick="goMv('dWEQjU3GCE0')">
+                            <a href="#">
                                 <img src="./img/mi1.jpeg" alt="뉴 커런츠상">
-                                <span>안녕, 내 고향</span>
                                 <ol class="movtxt">
                                     <li>뉴 커런츠상</li> <br>
                                     <li>&lt; 안녕, 내 고향&gt; </li> <br>
@@ -114,7 +113,7 @@
                                 </ol>
                             </a></li>
                         <li>
-                            <a href="#" onclick="goMv('RoMUUNBjO_8')">
+                            <a href="#">
                                 <img src="./img/mi2.jpeg" alt="매스">
                                 <ol class="movtxt">
                                     <li>플래시 포워드 관객상</li> <br>
@@ -123,7 +122,7 @@
                                 </ol>
                             </a></li>
                         <li>
-                            <a href="#" onclick="goMv('bR27YmkAK24')">
+                            <a href="#">
                                 <img src="./img/mi3.jpeg" alt="아임쏘쏘리">
                                 <ol class="movtxt">
                                     <li>부산시네필상</li> <br>
@@ -133,7 +132,7 @@
                                 </ol>
                             </a></li>
                         <li>
-                            <a href="#" onclick="goMv('SvKCs-80uk4')">
+                            <a href="#">
                                 <img src="./img/mi4.jpeg" alt="초록밤">
                                 <ol class="movtxt">
                                     <li>CGV아트하우스상</li> <br>
@@ -141,15 +140,15 @@
                                     <li>윤서진 | 대한민국</li>
                                 </ol>
                             </a></li>
-                        <!-- <li>
-                                <a href="#" onclick="goMv('KBT_YZdoF6g')">
+                        <li>
+                                <a href="#">
                                     <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
                                     <ol class="movtxt">
                                         <li>엔칸토: 마법의 세계</li>
                                         <li>스테파니 비트리즈</li>
                                         <li>애니메이션</li>
                                     </ol>
-                                </a></li> -->
+                                </a></li>
                             <!-- <li>
                                 <a href="#" onclick="goMv('yFZh-Wqi7RI')">
                                     <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
@@ -159,16 +158,16 @@
                                         <li>액션,판타지</li>
                                     </ol>
                                 </a></li> -->
-                    </ul>
-                </nav>
-                <a href="#" class="abtn lb">
-                    <img src="./img/left.png" alt="왼쪽버튼">
-                </a>
-                <a href="#" class="abtn rb">
-                    <img src="./img/right.png" alt="오른쪽버튼">
-                </a>
-        
+                            </ul>
+                            <a href="#" class="abtn lb">
+                                <img src="./img/left.png" alt="왼쪽버튼">
+                            </a>
+                            <a href="#" class="abtn rb">
+                                <img src="./img/right.png" alt="오른쪽버튼">
+                            </a>
+                        </nav>
             </section>
+        
             <!-- /******************************************* cont3 *******************************************/ -->
             <section class="cont3">
                 <h3 class="ad2">아시아영화의 창</h3>
@@ -357,7 +356,7 @@
                         </div>
                     </div>
             </section>
-
+        </main>
     <!-- /******************************************* 하단 *******************************************/ -->
     <!-- <div id="info">
         <footer class="info ibx">
