--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -89,10 +89,10 @@
             <h1 id="gosub">
                 <a href="sub1.html">
                     <img src="./img/logo.gif" alt="BIFF로고">
-                    <span>
+                    <!-- <span>
                         <br>
                         International Film Festival <br>
-                        </span>
+                        </span> -->
                 </a>
             </h1>
         </section>
