--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -8,6 +8,7 @@
     <title>부산국제영화제</title>
     <link rel="shortcut icon" href="./img/Biff_logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./media.css">
     <script src="./main.js"></script>
 </head>
 <body>
@@ -89,10 +90,10 @@
             <h1 id="gosub">
                 <a href="sub1.html">
                     <img src="./img/logo.gif" alt="BIFF로고">
-                    <!-- <span>
+                    <span>
                         <br>
                         International Film Festival <br>
-                        </span> -->
+                        </span>
                 </a>
             </h1>
         </section>
