--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -90,10 +90,9 @@
             <h1 id="gosub">
                 <a href="sub1.html">
                     <img src="./img/logo.gif" alt="BIFF로고">
-                    <span>
-                        <br>
-                        International Film Festival <br>
-                        </span>
+                </a>
+                <a href="#">
+                    <span>∨</span>
                 </a>
             </h1>
         </section>
@@ -143,7 +142,7 @@
                             </a></li>
                         <li>
                                 <a href="#">
-                                    <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
+                                    <img src="./img/ml5.jpg" alt="">
                                     <ol class="movtxt">
                                         <li>엔칸토: 마법의 세계</li>
                                         <li>스테파니 비트리즈</li>
@@ -176,39 +175,39 @@
                     <ul>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
-                                <img src="./img/c3ml1.jpeg" alt="엔칸토:마법의 세계">
+                                <img src="./img/c3ml1.jpeg" alt="">
                                 <ol class="movtxt3">
-                                    <li>엔칸토: 마법의 세계</li>
-                                    <li>스테파니 비트리즈</li>
-                                    <li>애니메이션</li>
+                                    <li>뉴 커런츠상</li> <br>
+                                    <li>&lt; 안녕, 내 고향&gt; </li> <br>
+                                    <li>왕얼저우 | 중국</li>
                                 </ol>
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('yFZh-Wqi7RI')">
-                                <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
+                                <img src="./img/ml6.png" alt="">
                                 <ol class="movtxt3">
-                                    <li>스파이더맨: 노 웨이 홈</li>
-                                    <li>톰 홀랜드, 젠데이아 콜먼</li>
-                                    <li>액션,판타지</li>
+                                    <li>뉴 커런츠상</li> <br>
+                                    <li>&lt; 안녕, 내 고향&gt; </li> <br>
+                                    <li>왕얼저우 | 중국</li>
                                 </ol>
                             </a>
                         </li>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
-                                <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
+                                <img src="./img/ml5.jpg" alt="">
                                 <ol class="movtxt3">
-                                    <li>엔칸토: 마법의 세계</li>
-                                    <li>스테파니 비트리즈</li>
-                                    <li>애니메이션</li>
+                                    <li>뉴 커런츠상</li> <br>
+                                    <li>&lt; 안녕, 내 고향&gt; </li> <br>
+                                    <li>왕얼저우 | 중국</li>
                                 </ol>
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('yFZh-Wqi7RI')">
-                                <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
+                                <img src="./img/ml6.png" alt="">
                                 <ol class="movtxt3">
-                                    <li>스파이더맨: 노 웨이 홈</li>
-                                    <li>톰 홀랜드, 젠데이아 콜먼</li>
-                                    <li>액션,판타지</li>
+                                    <li>뉴 커런츠상</li> <br>
+                                    <li>&lt; 안녕, 내 고향&gt; </li> <br>
+                                    <li>왕얼저우 | 중국</li>
                                 </ol>
                             </a>
                         </li>
@@ -219,39 +218,39 @@
                     <ul>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
-                                <img src="./img/c3ml1.jpeg" alt="엔칸토:마법의 세계">
+                                <img src="./img/c3ml1.jpeg" alt="">
                                 <ol class="movtxt3">
-                                    <li>엔칸토: 마법의 세계</li>
-                                    <li>스테파니 비트리즈</li>
-                                    <li>애니메이션</li>
+                                    <li>뉴 커런츠상</li> <br>
+                                    <li>&lt; 안녕, 내 고향&gt; </li> <br>
+                                    <li>왕얼저우 | 중국</li>
                                 </ol>
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('yFZh-Wqi7RI')">
-                                <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
+                                <img src="./img/ml6.png" alt="">
                                 <ol class="movtxt3">
-                                    <li>스파이더맨: 노 웨이 홈</li>
-                                    <li>톰 홀랜드, 젠데이아 콜먼</li>
-                                    <li>액션,판타지</li>
+                                    <li>뉴 커런츠상</li> <br>
+                                    <li>&lt; 안녕, 내 고향&gt; </li> <br>
+                                    <li>왕얼저우 | 중국</li>
                                 </ol>
                             </a>
                         </li>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
-                                <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
+                                <img src="./img/ml5.jpg" alt="">
                                 <ol class="movtxt3">
-                                    <li>엔칸토: 마법의 세계</li>
-                                    <li>스테파니 비트리즈</li>
-                                    <li>애니메이션</li>
+                                    <li>뉴 커런츠상</li> <br>
+                                    <li>&lt; 안녕, 내 고향&gt; </li> <br>
+                                    <li>왕얼저우 | 중국</li>
                                 </ol>
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('yFZh-Wqi7RI')">
-                                <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
+                                <img src="./img/ml6.png" alt="">
                                 <ol class="movtxt3">
-                                    <li>스파이더맨: 노 웨이 홈</li>
-                                    <li>톰 홀랜드, 젠데이아 콜먼</li>
-                                    <li>액션,판타지</li>
+                                    <li>뉴 커런츠상</li> <br>
+                                    <li>&lt; 안녕, 내 고향&gt; </li> <br>
+                                    <li>왕얼저우 | 중국</li>
                                 </ol>
                             </a>
                         </li>
