--- a/004.jQuery학습/002.실전연습/01_SlideChangeStage/onePage_autoScroll.html
+++ b/004.jQuery학습/002.실전연습/01_SlideChangeStage/onePage_autoScroll.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Page Auto Scroll</title>
+    <title>One Page - Auto Scroll</title>
     <style>
         html,
         body{
@@ -13,7 +13,7 @@
             height: 100%;/* 보이는 화면기준 채우기 */
             /* body하위 요소의 높이값 %의 기준이됨! */
             overflow: hidden;
-            /* 스크롤 숨김 (스크롤안됨) */
+            /* 스크롤숨김(스크롤안됨!) */
         }
         /* 공통셋팅 */
         a{
@@ -155,23 +155,23 @@
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery-autoScroll-1.0.js"></script>
     <script>
-        /////////////// 로딩구역 //////////////////////////
-        $(function(){ ////// jQB //////////////////////////////////////////////////////////////////
+        ///////////// 로딩구역 //////////////////////////////////
+        $(function(){ ////// jQB ///////////////////////////////
 
-            /***************************************************************************** 
-                                // GNB a요소 클릭시 페이지 이동하기 //
-            *****************************************************************************/
-            // 대상: .gnb a
-            $(".gnb a").click(function(e){ // e - 이벤트 전달변수
+            /************************************* 
+                GNB a요소 클릭시 페이지 이동하기
+            *************************************/
+           // 대상: .gnb a
+           $(".gnb a").click(function(e){ // e - 이벤트전달값
 
                 // 기본기능막기 : a의 이동기능막기
-                // e.preventDefault();
+                e.preventDefault();
 
                 // 1. 클릭된 a요소의 href값 읽어오기
-                // $(this) -> 클릭된 a요소 자신
+                // $(this) -> 클릭된 a요소 자신!
                 let idnm = $(this).attr("href");
-                // attr(속성명) ->속성값 읽어오기
-                // console.log("href값:",idnm);
+                // attr(속성명) -> 속성값 읽어오기
+                console.log("href값:",idnm);
 
                 // 2. 아이디요소의 위치값 알아내기
                 // offset().top 으로 알아냄
@@ -179,17 +179,18 @@
                 console.log("위치값:",pos);
 
                 // 3. 스크롤 위치 이동 애니메이션
-                // 대상: html,body -> 최상위부모 2개 그룹선택함
+                // 대상: html,body -> 최상위부모 2개 그룹선택함!
                 // 이동속성: scrollTop -> 세로스크롤 위치속성
                 // 참고) scrollLeft 는 가로스크롤 위치속성
                 $("html,body").animate({
                     scrollTop: pos + "px"
                 }, 700,"easeInOutQuint");
 
-            }); ////////// click /////////////
+           });/////////// click ////////////
 
-            
-        }); //////////////// jQB //////////////////////////////////////////////////////////////////
+
+        }); /////////////////// jQB ////////////////////////////
+        ////////////////////////////////////////////////////////
     </script>
     </head>
 <body>
