--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -166,6 +166,9 @@
                                 <img src="./img/right.png" alt="오른쪽버튼">
                             </a>
                         </nav>
+                        <a href="#">
+                            <span>∨</span>
+                        </a>
             </section>
         
             <!-- /******************************************* cont3 *******************************************/ -->
@@ -212,6 +215,13 @@
                             </a>
                         </li>
                     </ul>
+                    <a href="#" class="abtn2 lb">
+                        <img src="./img/left.png" alt="왼쪽버튼">
+                    </a>
+                    <a href="#" class="abtn2 rb">
+                        <img src="./img/right.png" alt="오른쪽버튼">
+                    </a>
+
                 </nav>
                 <h3 class="ad3">와이드 앵글</h3>
                 <nav class="mlist3-2">
@@ -255,6 +265,13 @@
                             </a>
                         </li>
                     </ul>
+                    <a href="#" class="abtn2 lb">
+                        <img src="./img/left.png" alt="왼쪽버튼">
+                    </a>
+                    <a href="#" class="abtn2 rb">
+                        <img src="./img/right.png" alt="오른쪽버튼">
+                    </a>
+
                 </nav>
 
             </section>
