--- a/004.jQuery학습/002.실전연습/01_SlideChangeStage/onePage_autoScroll.html
+++ b/004.jQuery학습/002.실전연습/01_SlideChangeStage/onePage_autoScroll.html
@@ -1,46 +1,56 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Page - Auto Scroll</title>
     <style>
         html,
-        body{
+        body {
             margin: 0;
             padding: 0;
             width: 100%;
-            height: 100%;/* 보이는 화면기준 채우기 */
+            height: 100%;
+            /* 보이는 화면기준 채우기 */
             /* body하위 요소의 높이값 %의 기준이됨! */
             overflow: hidden;
             /* 스크롤숨김(스크롤안됨!) */
         }
+
         /* 공통셋팅 */
-        a{
+        a {
             text-decoration: none;
             color: #fff;
             text-shadow: 0 0 2px #777;
         }
-        ul{
+
+        ul {
             margin: 0;
             padding: 0;
             list-style: none;
         }
-        ul::after{/* float해제 */
+
+        ul::after {
+            /* float해제 */
             content: '';
             display: block;
             clear: both;
         }
-        li{
-            float: left;/* 옆으로 흐르게 */
+
+        li {
+            float: left;
+            /* 옆으로 흐르게 */
         }
-        img{
+
+        img {
             border: none;
             /* 이미지 링크시 테두리없앰 */
         }
+
         h1,
         h2,
-        h3{
+        h3 {
             margin: 0;
             padding: 0;
             font-size: 100%;
@@ -49,7 +59,8 @@
         /* 공통 class */
 
         /* 페이지 공통 class */
-        .page{/* 한페이지 보이는 화면 채우기 */
+        .page {
+            /* 한페이지 보이는 화면 채우기 */
             width: 100%;
             height: 100%;
             /* 
@@ -66,7 +77,7 @@
         }
 
         /* IR(배경이미지 설명 숨기기) class */
-        .ir{
+        .ir {
             display: block;
             width: 0;
             height: 0;
@@ -74,81 +85,138 @@
         }
 
         /* 중앙 속박스 */
-        .ibx{
+        .ibx {
             width: 1920px;
             max-width: 100%;
             /* 1920px보다 작을땐 100%를 유지함! */
-            margin: 0 auto;/* 마영오 - 중앙정렬 */
+            margin: 0 auto;
+            /* 마영오 - 중앙정렬 */
         }
 
         /* 1. 상단영역 */
-        #top{
+        #top {
             position: fixed;
             /* 상단고정-보이는화면기준 */
             width: 100%;
-            z-index: 9999;/* 맨위! */
-            background-color: rgba(0,0,0,.7);
+            z-index: 9999;
+            /* 맨위! */
+            background-color: rgba(0, 0, 0, .7);
         }
+
         /* 상단영역 속박스 */
-        .top{
+        .top {
             position: relative;
             /* 부모자격 */
             height: 80px;
         }
 
         /* 1-1.로고 */
-        #logo{
+        #logo {
             width: 250px;
             height: 100%;
             text-align: center;
             overflow: hidden;
         }
-        #logo img{
+
+        #logo img {
             width: 100%;
             margin-top: -24px;
         }
 
         /* 1-2. GNB 메뉴 */
-        .gnb{
+        .gnb {
             position: absolute;
             /* 부모는? .top */
             top: 40px;
             right: 2%;
         }
-        .gnb li{
+
+        .gnb li {
             margin: 0 7px;
         }
+
         /* 메뉴에 마우스 오버시 + 부모li에 .on인 경우 */
         .gnb a:hover,
-        .gnb li.on a{
-            display: inline-block;/* 트랜스폼적용위해 */
+        .gnb li.on a {
+            display: inline-block;
+            /* 트랜스폼적용위해 */
             color: lime;
-            text-decoration: overline;/* 윗줄 */
+            text-decoration: overline;
+            /* 윗줄 */
             transform: scale(1.1);
         }
 
         /* 2. 페이지영역 */
         /* 개별 페이지 셋팅 */
-        #pg1{
+        #pg1 {
             background: url(images/pic1.png) no-repeat top/cover;
         }
-        #pg2{
+
+        #pg2 {
             background: url(images/pic2.png) no-repeat top/cover;
         }
-        #pg3{
+
+        #pg3 {
             background: url(images/pic3.png) no-repeat top/cover;
         }
-        #pg4{
+
+        #pg4 {
             background: url(images/pic4.png) no-repeat top/cover;
         }
-        #pg5{
+
+        #pg5 {
             background: url(images/pic5.png) no-repeat top/cover;
         }
-        #pg6{
+
+        #pg6 {
             background: url(images/pic6.png) no-repeat top/cover;
         }
-        #pg7{
+
+        #pg7 {
             background: url(images/pic7.png) no-repeat top/cover;
+        }
+
+        /* 인디케이터 */
+        .indic {
+            position: fixed;
+            top: 50%;
+            transform: translateY(-50%);
+            /* 세로중앙이동 */
+            left: 5%;
+            width: 20px;
+            /* outline: 3px dotted blue; */
+        }
+
+        .indic li {
+            width: 100%;
+            height: 10px;
+            margin: 3px 0;
+            cursor: pointer;
+            /* 손가락모양 */
+        }
+
+        /* a요소 */
+        .indic a {
+            display: block;
+            width: 100%;
+            height: 2px;
+            margin-top: 4px;
+            background-color: #ccc;
+            box-shadow: 1px 1px 1px #777;
+            transition: width .4s;
+        }
+
+        /* 마우스 오버시 + 클래스 "on" */
+        .indic li:hover a,
+        .indic li.on a {
+            width: 150%;
+            background-color: #fff;
+        }
+
+
+        /* 설명글자숨기기 */
+        .indic span {
+            display: none;
         }
 
     </style>
@@ -157,13 +225,13 @@
     <script src="js/jquery-autoScroll-1.0.js"></script>
     <script>
         ///////////// 로딩구역 //////////////////////////////////
-        $(function(){ ////// jQB ///////////////////////////////
+        $(function () { ////// jQB ///////////////////////////////
 
             /************************************* 
                 GNB a요소 클릭시 페이지 이동하기
             *************************************/
-           // 대상: .gnb a
-           $(".gnb a").click(function(e){ // e - 이벤트전달값
+            // 대상: .gnb a
+            $(".gnb a, .indic a").click(function (e) { // e - 이벤트전달값
 
                 // 기본기능막기 : a의 이동기능막기
                 e.preventDefault();
@@ -172,12 +240,12 @@
                 // $(this) -> 클릭된 a요소 자신!
                 let idnm = $(this).attr("href");
                 // attr(속성명) -> 속성값 읽어오기
-                console.log("href값:",idnm);
+                console.log("href값:", idnm);
 
                 // 2. 아이디요소의 위치값 알아내기
                 // offset().top 으로 알아냄
                 let pos = $(idnm).offset().top;
-                console.log("위치값:",pos);
+                console.log("위치값:", pos);
 
                 // 3. 스크롤 위치 이동 애니메이션
                 // 대상: html,body -> 최상위부모 2개 그룹선택함!
@@ -188,16 +256,17 @@
                 }, dur_sc, easeing_sc);
 
                 $(this).parent().addClass("on")
-                .siblings().removeClass("on");
+                    .siblings().removeClass("on");
 
 
-           });/////////// click ////////////
+            }); /////////// click ////////////
 
 
         }); /////////////////// jQB ////////////////////////////
         ////////////////////////////////////////////////////////
     </script>
-    </head>
+</head>
+
 <body>
     <!-- 1. 상단영역 -->
     <div id="top">
@@ -272,8 +341,9 @@
             </li>
         </ul>
     </nav>
-    
 
-    
+
+
 </body>
+
 </html>
